@@ -1,5 +1,6 @@
 package org.lazywizard.radar.renderers.combat;
 
+import java.awt.Color;
 import java.util.List;
 import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.combat.BattleObjectiveAPI;
@@ -38,7 +39,7 @@ public class ObjectiveRenderer implements CombatRenderer
         }
 
         this.radar = radar;
-        drawQueue = new DrawQueue(12);
+        drawQueue = new DrawQueue(24);
     }
 
     @Override
@@ -58,35 +59,38 @@ public class ObjectiveRenderer implements CombatRenderer
             {
                 for (BattleObjectiveAPI objective : objectives)
                 {
+                    final Color color;
                     // Owned by player
                     if (objective.getOwner() == player.getOwner())
                     {
-                        drawQueue.setNextColor(radar.getFriendlyContactColor(),
-                                radar.getContactAlpha());
+                        color = radar.getFriendlyContactColor();
                     }
                     // Owned by opposition
                     else if (objective.getOwner() + player.getOwner() == 1)
                     {
-                        drawQueue.setNextColor(radar.getEnemyContactColor(),
-                                radar.getContactAlpha());
+                        color = radar.getEnemyContactColor();
                     }
                     // Not owned yet
                     else
                     {
-                        drawQueue.setNextColor(radar.getNeutralContactColor(),
-                                radar.getContactAlpha());
+                        color = radar.getNeutralContactColor();
                     }
 
                     final float[] radarLoc = radar.getRawPointOnRadar(objective.getLocation());
                     final float size = 250f * radar.getCurrentPixelsPerSU();
-                    drawQueue.addVertices(new float[]
+                    final float[] vertices = new float[]
                     {
                         radarLoc[0], radarLoc[1] + size,
                         radarLoc[0] + size, radarLoc[1],
                         radarLoc[0], radarLoc[1] - size,
                         radarLoc[0] - size, radarLoc[1]
-                    });
+                    };
+                    drawQueue.setNextColor(color, radar.getContactAlpha());
+                    drawQueue.addVertices(vertices);
                     drawQueue.finishShape(GL_LINE_LOOP);
+                    drawQueue.setNextColor(color, radar.getContactAlpha() * 0.15f);
+                    drawQueue.addVertices(vertices);
+                    drawQueue.finishShape(GL_QUADS);
                 }
             }
 
@@ -102,14 +106,14 @@ public class ObjectiveRenderer implements CombatRenderer
         radar.enableStencilTest();
 
         // Draw objectives
-        glLineWidth(radar.getCurrentPixelsPerSU() * 50f);
-        glEnable(GL_LINE_SMOOTH);
+        glLineWidth(radar.getCurrentPixelsPerSU() * 25f);
+        glEnable(GL_POLYGON_SMOOTH);
         glEnableClientState(GL_VERTEX_ARRAY);
         glEnableClientState(GL_COLOR_ARRAY);
         drawQueue.draw();
         glDisableClientState(GL_VERTEX_ARRAY);
         glDisableClientState(GL_COLOR_ARRAY);
-        glDisable(GL_LINE_SMOOTH);
+        glDisable(GL_POLYGON_SMOOTH);
 
         radar.disableStencilTest();
     }
